--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
       <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900" rel="stylesheet" />
       <link rel="stylesheet" type="text/css" href="../node_modules/videogular2/fonts/videogular.css">
-  <link rel="stylesheet" href="styles.6ac9b8d0aaa48d778ce9.css"></head>
+      <!-- <link rel="stylesheet" type="text/css" href="assets/fonts/flaticons/flaticon.css"> -->
+  <link rel="stylesheet" href="styles.4b4be8d54767317eeb1e.css"></head>
   <body>
     <app-root> </app-root>
-  <script type="text/javascript" src="runtime.e4a4766a1b2cc5237dc3.js"></script><script type="text/javascript" src="polyfills.d6ae4f567259823dc130.js"></script><script type="text/javascript" src="scripts.b5ea1a3cf9f89977f873.js"></script><script type="text/javascript" src="main.ebad807767adab8a54c7.js"></script></body>
+  <script type="text/javascript" src="runtime.55d79bc9c163f32c7515.js"></script><script type="text/javascript" src="polyfills.59e712681c0b44c3af57.js"></script><script type="text/javascript" src="scripts.b5ea1a3cf9f89977f873.js"></script><script type="text/javascript" src="main.50111e6267b4d7b72e44.js"></script></body>
 </html>
